Correct aligning of top interesting

--- a/less/style.less
+++ b/less/style.less
@@ -1356,10 +1356,10 @@ Version: 1.0
   .top-interes {
     margin-top: 7rem;
     .row {
-      flex-direction: column;
-      padding-top: 2rem;
+      flex-direction: column;      
       .top-interes__tabs {
         justify-content: center;
+        margin-top: 2rem;
         margin-bottom: 2rem;
         .nav-link {
           position: relative;
